// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metrics agent does not have context.iopipe.log collisions, unless using iopipe.log 1`] = `
Array [
  Object {
    "n": undefined,
    "name": "func-1-log-1",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "iopipe-log-func-1-log-2",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "func-1-log-3",
    "s": "true",
  },
]
`;

exports[`metrics agent does not have context.iopipe.log collisions, unless using iopipe.log 2`] = `
Array [
  Object {
    "n": undefined,
    "name": "func-2-log-1",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "func-2-log-2",
    "s": "true",
  },
]
`;

exports[`metrics agent does not have context.iopipe.log collisions, unless using iopipe.log 3`] = `
Array [
  Object {
    "n": undefined,
    "name": "func-1-log-1",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "iopipe-log-func-1-log-2",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "func-1-log-3",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "iopipe-log-func-2-log-3",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "iopipe-log-func-1-log-4",
    "s": "true",
  },
  Object {
    "n": undefined,
    "name": "iopipe-log-func-1-log-4",
    "s": "true",
  },
]
`;
